--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,10 @@ img {
   transform: translate(-50%, -50%);
 }
 
+.close-button:active .close-button-icon {
+  fill: #fb0000;
+}
+
 .close-button {
   width: 30px;
   height: 30px;
@@ -150,8 +154,7 @@ img {
   cursor: pointer;
 }
 
-.close-button:hover,
-.close-button:focus {
+.close-button:hover, .close-button:focus {
   border: 4px solid rgba(0, 0, 0, 0.3);
   outline: none;
 }
@@ -160,10 +163,6 @@ img {
   border: 4px solid #fb8e9c;
   border-radius: 50%;
   outline: none;
-}
-
-.close-button:active .close-button-icon {
-  fill: #fb0000;
 }
 
 .is-hidden {
@@ -205,18 +204,10 @@ img {
 .modal-form-input {
   width: 100%;
   height: 40px;
-  /*margin-top: 4px;
-    margin-bottom: 10px;*/
   padding-left: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition-property: border-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-icon {
-  transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -226,10 +217,6 @@ img {
   border: 1px solid var(--accent-color);
 }
 
-.modal-form-input:focus + .modal-form-icon {
-  fill: var(--accent-color);
-}
-
 .modal-form-icon {
   width: 18px;
   height: 18px;
@@ -237,6 +224,13 @@ img {
   left: 12px;
   top: 50%;
   transform: translateY(-50%);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
 }
 
 .modal-form-massage {
@@ -290,15 +284,15 @@ img {
   display: inline-block;
 }
 
-.modal-form-policy-link {
-  color: var(--accent-color);
-}
-
 .modal-form-policy:checked + .modal-form-policy-text::before {
   background-image: url(../images/icon_check.svg);
   background-repeat: no-repeat;
   background-size: cover;
   border: none;
+}
+
+.modal-form-policy-link {
+  color: var(--accent-color);
 }
 
 .modal-form-button {
@@ -324,6 +318,18 @@ img {
   padding-bottom: 25px;
 }
 
+.header .logo {
+  margin-right: 93px;
+}
+
+.header .address-list-link {
+  display: flex;
+  align-items: center;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .site-nav {
   display: flex;
   align-items: center;
@@ -333,22 +339,10 @@ img {
   display: flex;
 }
 
-.header .logo {
-  margin-right: 93px;
-}
-
 .address-list-header {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.header .address-list-link {
-  display: flex;
-  align-items: center;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list-icon {
@@ -412,18 +406,17 @@ img {
   letter-spacing: 0.02em;
 }
 
+.navigation-list-link:hover, .navigation-list-link:focus,
+.address-list-link:hover,
+.address-list-link:focus {
+  color: var(--accent-color);
+}
+
 .navigation-list-link {
   color: var(--heading-color);
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.navigation-list-link:hover,
-.navigation-list-link:focus,
-.address-list-link:hover,
-.address-list-link:focus {
-  color: var(--accent-color);
 }
 
 .navigation-list-link.active {
@@ -655,6 +648,10 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.social-list-link:hover, .social-list-link:focus {
+  background: var(--accent-color);
+}
+
 .social-list-icon {
   width: 20px;
   height: 20px;
@@ -662,11 +659,6 @@ img {
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social-list-link:hover,
-.social-list-link:focus {
-  background: var(--accent-color);
 }
 
 .social-list-link:hover .social-list-icon,
@@ -704,14 +696,8 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.our-client-link:hover,
-.our-client-link:focus {
+.our-client-link:hover, .our-client-link:focus {
   border-color: var(--accent-color);
-}
-
-.our-client-link:hover .our-clients-icon,
-.our-client-link:focus .our-clients-icon {
-  fill: var(--accent-color);
 }
 
 .our-clients-list-item:not(:last-child) {
@@ -723,6 +709,11 @@ img {
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.our-client-link:hover .our-clients-icon,
+.our-client-link:focus .our-clients-icon {
+  fill: var(--accent-color);
 }
 
 .first-client-icon {
@@ -897,8 +888,7 @@ img {
   margin-right: 8px;
 }
 
-.portfolio-button:hover,
-.portfolio-button:focus {
+.portfolio-button:hover, .portfolio-button:focus {
   background-color: var(--accent-color);
   color: var(--main-color-dark-backgr);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -979,8 +969,7 @@ img {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list-link:hover,
-.portfolio-list-link:focus {
+.portfolio-list-link:hover, .portfolio-list-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
