--- a/sass/layout/_our-clients.scss
+++ b/sass/layout/_our-clients.scss
@@ -27,16 +27,11 @@
     transition-property: border-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.our-client-link:hover,
-.our-client-link:focus {
-    border-color: var(--accent-color);
-}
-
-.our-client-link:hover .our-clients-icon,
-.our-client-link:focus .our-clients-icon {
-    fill: var(--accent-color);
+    &:hover,
+    &:focus {
+        border-color: var(--accent-color);
+    }
 }
 
 .our-clients-list-item:not(:last-child) {
@@ -45,11 +40,16 @@
 
 
 .our-clients-icon {
-   fill: #afb1b8;
+    fill: #afb1b8;
 
-   transition-property: fill;
-   transition-duration: 250ms;
-   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    .our-client-link:hover &,
+    .our-client-link:focus & {
+        fill: var(--accent-color);
+    }
 }
 
 .first-client-icon {
