--- a/sass/layout/_our-comand.scss
+++ b/sass/layout/_our-comand.scss
@@ -1,12 +1,13 @@
  /* ============== OUR COMAND ============== */
+
 .our-command-section {
     background-color: var(--backgr-color-second);
-}
 
-.our-command-section > .container{
-    padding-top: 94px;
-    padding-bottom: 94px;
-    flex-direction: column;
+    & > .container{
+        padding-top: 94px;
+        padding-bottom: 94px;
+        flex-direction: column;
+    }
 }
 
 .our-command-list {
@@ -18,10 +19,10 @@
     background-color: var(--main-color-dark-backgr);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-}
 
-.our-command-list-item:not(:last-child) {
-    margin-right: var(--card-set-our-command);
+    &:not(:last-child) {
+        margin-right: var(--card-set-our-command);
+    }
 }
 
 .our-command-card-content {
@@ -72,6 +73,11 @@
     transition-property: background;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        background: var(--accent-color);
+    }
 }
 
 .social-list-icon {
@@ -82,16 +88,11 @@
     transition-property: fill;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.social-list-link:hover,
-.social-list-link:focus {
-    background: var(--accent-color);
-}
-
-.social-list-link:hover .social-list-icon,
-.social-list-link:focus .social-list-icon {
-    fill: var(--main-color-dark-backgr);
+    .social-list-link:hover &,
+    .social-list-link:focus & {
+        fill: var(--main-color-dark-backgr);
+    }
 }
 
 /* ============== OUR COMAND END ============== */
