--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -25,17 +25,17 @@
     transition-property: color, background-color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.portfolio-button:not(:last-child){
-    margin-right: 8px;
-}
+    &:not(:last-child){
+        margin-right: 8px;
+    }
 
-.portfolio-button:hover,
-.portfolio-button:focus {
-    background-color: var(--accent-color);
-    color: var(--main-color-dark-backgr);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+        color: var(--main-color-dark-backgr);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
 }
 
 .portfolio-list {
@@ -78,13 +78,13 @@
     transform: translateY(100%);
     transition-property: transform;
     transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
+    .portfolio-list-link:hover &,
+    .portfolio-list-link:focus & {
+        transform: translateY(0);
+    }
 
-}
-
-.portfolio-list-link:hover .portfolio-overlay,
-.portfolio-list-link:focus .portfolio-overlay {
-    transform: translateY(0);
 }
 
 .portfolio-card-content {
@@ -117,11 +117,11 @@
     transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);     
-}
 
-.portfolio-list-link:hover,
-.portfolio-list-link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
 /* ============== PORTFOLIO.HTML END ============== */
