--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import './base/container';
 // components
 @import './components/backdrop';
+@import './components/social-list';
 //layout
 @import './layout/header';
 @import './layout/hero';
