--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -4,6 +4,8 @@
 // base
 @import './base/common';
 @import './base/container';
+// components
+@import './components/social-list';
 //layout
 @import './layout/header';
 @import './layout/portfolio';
