--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 // components
 @import './components/backdrop';
 @import './components/social-list';
+@import './components/logo';
 //layout
 @import './layout/header';
 @import './layout/hero';
