--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,9 +5,10 @@
 @import './base/common';
 @import './base/container';
 // components
-@import './components/backdrop';
-@import './components/social-list';
+@import './components/button';
 @import './components/logo';
+@import './components/social-list';
+@import './components/backdrop';
 //layout
 @import './layout/header';
 @import './layout/hero';
