--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -5,6 +5,8 @@
 @import './base/common';
 @import './base/container';
 // components
+@import './components/button';
+@import './components/logo';
 @import './components/social-list';
 //layout
 @import './layout/header';
