--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -63,12 +63,6 @@ body {
   color: var(--main-color);
 }
 
-.button {
-  font-family: var(--main-font);
-  border: 0;
-  border-radius: 4px;
-}
-
 h1,
 h2,
 h3,
@@ -105,6 +99,53 @@ img {
   display: flex;
   align-items: center;
   background: transparent;
+}
+
+.button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  width: 200px;
+  min-height: 50px;
+  background: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  cursor: pointer;
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  /*text-align: center;*/
+  letter-spacing: 0.06em;
+  color: var(--main-color-dark-backgr);
+}
+
+.button .icon {
+  width: 24px;
+  height: 24px;
+  fill: var(--main-color-dark-backgr);
+  margin-left: 10px;
+}
+
+.logo {
+  color: var(--logo-color);
+  font-family: var(--secondary-font);
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.192;
+  letter-spacing: 0.03em;
+}
+
+.logo-first {
+  color: var(--accent-color);
+}
+
+.logo-second.dark {
+  color: var(--main-color-dark-backgr);
 }
 
 .social-list {
@@ -458,26 +499,7 @@ img {
 }
 
 .subscription-form-button {
-  display: inline-flex;
-  align-items: center;
-  height: 50px;
-  padding: 10px 29px;
   margin-left: 12px;
-  background: var(--accent-color);
-  border-radius: 4px;
-  border: none;
-  font-weight: 700;
-  font-size: 16px;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-color-dark-backgr);
-}
-
-.sibscription-form-button-icon {
-  width: 24px;
-  height: 24px;
-  fill: var(--main-color-dark-backgr);
-  margin-left: 10px;
 }
 
 /* ============== FOOTER END ============== */
