--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -22,19 +22,8 @@
 
 }
 
-.hero-button {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.625;
-    text-align: center;
-    letter-spacing: 0.03em;
-    min-width: 200px;
-    height: 50px;   
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    cursor: pointer;
-    padding: 10px 32px;
-    color: var(--main-color-dark-backgr);
-    background-color: var(--accent-color);
-}
+/*.hero-button {
+
+}*/
 
 /* ============== HERO SECTION END ============== */
