--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -472,10 +472,14 @@ img {
 }
 
 .subscription-form {
-  margin-left: 93px;
+  width: 570px;
+  margin-left: auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .subscription-form-title {
+  width: 100%;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.143;
@@ -494,10 +498,17 @@ img {
   padding-left: 16px;
 }
 
-.subscription-form-field {
-  display: inline-block;
+.subscription-form-input::placeholder {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 
+/*.subscription-form-field {
+    display: inline-block;
+}*/
 .subscription-form-button {
   margin-left: 12px;
 }
