--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -55,11 +55,15 @@
 }
 
 .subscription-form {
-    margin-left: 93px;
+    width: 570px;
+    margin-left: auto;
+    display:flex;
+    flex-wrap: wrap;
 
 }
 
 .subscription-form-title {
+    width:100%;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.143;
@@ -76,11 +80,18 @@
     border-radius: 4px;
     background: transparent;
     padding-left: 16px;
+    &::placeholder {
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: 0.03em;
+        color: rgba(255, 255, 255, 0.6);
+    }
 }
 
-.subscription-form-field {
+/*.subscription-form-field {
     display: inline-block;
-}
+}*/
 
 .subscription-form-button {
     margin-left: 12px;
