--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -78,11 +78,8 @@
 
 .navigation-list-link,
 .address-list-link {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.143;
-    letter-spacing: 0.02em;
-
+    @include font(500, 14px, 1.143, 0.02em);
+  
     &:hover,
     &:focus {
         color: var(--accent-color);
