--- a/sass/layout/_our-comand.scss
+++ b/sass/layout/_our-comand.scss
@@ -35,21 +35,15 @@
 
 .our-specialist-name {
     margin-bottom: 10px;
-    font-weight: 500;
+    @include font(500, 16px, 1.188, 0.03em);
+    text-align: center;
     color: var(--heading-color);
 }
 
 .our-specialist-specialization {
-    font-weight: 400;
     margin-bottom: 16px;
-}
-
-.our-specialist-name,
-.our-specialist-specialization {
-    font-size: 16px;
-    line-height: 1.188;
+    @include font(400, 16px, 1.188, 0.03em);
     text-align: center;
-    letter-spacing: 0.03em;
 }
 
 /* ============== OUR COMAND END ============== */
