--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -1,3 +1,5 @@
+/* ============== SOCIAL-LIST component ============== */
+
 .social-list {
     display: flex;
     justify-content: center;
@@ -40,3 +42,5 @@
         fill: var(--main-color-dark-backgr);
     }
 }
+
+/* ============== SOCIAL-LIST  component END ============== */
