--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -38,12 +38,16 @@
     line-height: 1.142;
     text-transform: uppercase;
     color: var(--heading-color);
+
+    /*@include font($font-weight, $font-size, $line-height, $letter-spacing, $color)*/
     margin-bottom: 10px;
 }
 
 .advantages-description {
     font-weight: 400;
     line-height: 1.714;
+
+    /*@include font($font-weight, $font-size, $line-height, $letter-spacing, $color)*/
 }
 
 /* ============== ADVANTAGES SECTION END ============== */
