--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -11,11 +11,8 @@
 }
 
 .hero-title {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.364;
+    @include font(900, 44px, 1.364, 0.06em);
     text-align: center;
-    letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--main-color-dark-backgr);
     margin-bottom: 30px;
