--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -16,11 +16,8 @@
     color: var(--heading-color);
     background-color: var(--backgr-color-second);
     padding: 6px 22px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.625;
-    text-align: center;
-    letter-spacing: 0.03em;
+
+    @include font(500, 16px, 1.625, 0.03em);
 
     transition-property: color, background-color, box-shadow;
     transition-duration: 250ms;
@@ -60,10 +57,7 @@
 }
 
 .portfolio-overlay {
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.556;
-    letter-spacing: 0.03em;
+    @include font(400, 18px, 1.556, 0.03em);
     color: var(--main-color-dark-backgr);
 
     background: rgba(33, 150, 243, 0.9);
@@ -96,18 +90,13 @@
 
 .portfolio-title {
     margin-bottom: 4px;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+
+    @include font(700, 18px, 2, 0.06em);
     color: var(--heading-color);
 }
 
 .portfolio-type {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.875;
-    letter-spacing: 0.03em;
+    @include font(400, 16px, 1.875, 0.03em);
 
 }
 
