--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -13,6 +13,11 @@
 }
 
 .portfolio-button {
+    display: inline-flex;
+    align-items: center;
+    justify-content:center;
+    border: none;
+    border-radius: 4px;
     color: var(--heading-color);
     background-color: var(--backgr-color-second);
     padding: 6px 22px;
