Додає виправлення по зауваженнях

--- a/css/main.css
+++ b/css/main.css
@@ -790,6 +790,7 @@ img {
 }
 
 .social-list-our-projekt {
+  margin-top: 12px;
   margin-left: 70px;
 }
 
@@ -813,6 +814,7 @@ img {
 
 .subscription-form {
   width: 570px;
+  margin-top: 12px;
   margin-left: auto;
   display: flex;
   flex-wrap: wrap;
