--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -30,6 +30,7 @@
 }
 
 .social-list-our-projekt {
+    margin-top: 12px;
     margin-left: 70px;  
 }
 
@@ -50,6 +51,7 @@
 
 .subscription-form {
     width: 570px;
+    margin-top: 12px;
     margin-left: auto;
     display:flex;
     flex-wrap: wrap;
